Sync update PR (#87)
Co-authored-by: samypr100 <3933065+samypr100@users.noreply.github.com>
Co-authored-by: Sean <sean.phillips@jhuapl.edu>